--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ footer {
     .sponsor {
         flex-wrap: wrap;
         margin-top: 50px;
+        gap: 20px;
     }
     .product-items {
         grid-template-columns: repeat(1, 1fr);
