--- a/style.css
+++ b/style.css
@@ -271,6 +271,9 @@ footer {
     .nav-menu {
         display: none;
     }
+    nav > h1 {
+        font-size: 18px;
+    }
     #cart-mobile {
         display: block;
     }
@@ -299,7 +302,6 @@ footer {
     .sponsor {
         flex-wrap: wrap;
         margin-top: 50px;
-        gap: 20px;
     }
     .product-items {
         grid-template-columns: repeat(1, 1fr);
