--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ main {
     max-width: 1400px;
     margin: 0 auto;
 }
+
+/* Nav Bar Styles */
 nav {
     display: flex;
     justify-content: space-between;
@@ -81,6 +83,7 @@ nav {
     border-radius: 50%;
 }
 
+/* Banner Section Styles */
 .banner {
     width: 100%;
     height: 100vh;
@@ -117,6 +120,7 @@ nav {
     transform: rotate(30deg);
 }
 
+/* Sponsor Section Styles */
 .sponsor {
     display: flex;
     justify-content: center;
@@ -133,6 +137,7 @@ nav {
     width: 70px;
 }
 
+/* Products Style */
 .products {
     margin: 80px 0;
 }
@@ -168,6 +173,16 @@ nav {
     width: 100%;
 }
 
+.see-more {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+    margin-top: 30px;
+    color: #e02c6dde;
+    font-weight: 600;
+}
+
 .fill {
     color: rgba(255, 196, 0, 0.966);
 }
@@ -175,6 +190,7 @@ nav {
     color: gray;
 }
 
+/* Featured Style */
 .featured {
     display: flex;
     justify-content: space-between;
@@ -190,6 +206,7 @@ nav {
     gap: 15px;
 }
 
+/* Sign Up Style */
 .sign-up {
     padding: 80px;
     background: rgb(235, 235, 235);
@@ -233,6 +250,7 @@ nav {
     cursor: pointer;
 }
 
+/* Footer Style */
 footer {
     text-align: center;
     padding: 50px 0;
@@ -293,7 +311,7 @@ footer {
         align-items: center;
     }
     .banner .content h1 {
-        font-size: 32px;
+        font-size: 24px;
         color: #3a3a3a;
     }
     .sponsor img {
@@ -342,6 +360,7 @@ footer {
     }
 }
 
+/* Responsive for Tablet */
 @media only screen and (max-width: 998px) and (min-width: 601px) {
     header,
     main {
